--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     <section id="sub-1" class="section-1 section">
       <h1>
-        anatomy
+        anatomy-2
         <ion-icon class="icon-b" name="document-text-outline"></ion-icon>
       </h1>
       <div class="container">
@@ -140,7 +140,7 @@
     </section>
     <section id="sub-3" class="section-3 section">
       <h1>
-        biochemistry
+        biochemistry-2
         <ion-icon class="icon-b" name="document-text-outline"></ion-icon>
       </h1>
       <div class="container">
@@ -169,7 +169,7 @@
     </section>
     <section id="sub-4" class="section-4 section">
       <h1>
-        physiology
+        physiology-2
         <ion-icon class="icon-b" name="document-text-outline"></ion-icon>
       </h1>
       <div class="container">
@@ -228,7 +228,7 @@
     </section>
     <section id="sub-5" class="section-5 section">
       <h1>
-        Hydrotherapy
+        Hydrotherapy-1
         <ion-icon class="icon-b" name="document-text-outline"></ion-icon>
       </h1>
       <div class="container">
