--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <head>
     <link rel="icon" href="R.jpeg" />
     <link rel="stylesheet" href="style.css" />
+    <meta name="robots" content="noindex, nofollow, noarchive, nosnippet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
