--- a/index.html
+++ b/index.html
@@ -371,5 +371,13 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.addEventListener('contextmenu', (event) => {
+                event.preventDefault();
+            
+            });
+        });
+    </script>
   </body>
 </html>
